fixing skeleton for dark mode

--- a/src/App.css
+++ b/src/App.css
@@ -24,7 +24,7 @@
 }
 
 .modal-content.show {
-    transform: scale(1);
+    transform: scale(1.2);
 }
 
 @keyframes expand {
